--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -26,10 +26,9 @@
 .projectCard {
   border: 1px solid #141d26;
   width: auto;
-  padding: 5px 20px;
+  padding: 0px 7px;
   overflow-wrap: break-word;
   background-color: #fbf8fd;
-  border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s;
 }
@@ -63,13 +62,9 @@
 .headingPostTitle {
   color: #222222;
   font-size: 2.5rem;
-  line-height: 1;
+  line-height: 1.5;
   font-weight: 800;
   letter-spacing: -0.05rem;
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-  padding-right: 0rem;
-  padding-left: 0rem;
 }
 
 .headingPostTitleId {
@@ -175,20 +170,14 @@
 }
 
 .introSectionAbout {
-  padding-top: 0.8rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-bottom: .55rem;
-  background-color: #FBF8FD;
+  border: 1px solid #141d26;
+  padding: 1rem 1.2rem 1.2rem;
+  background-color: #fbf8fd;
   border-radius: 8px;
-  outline: 1px solid #141d26
 }
 
 .introSectionAllPosts {
-  padding-top: 0.8rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-bottom: .46rem;
+  padding: 0rem 1rem 0.5rem;
   background-color: #FBF8FD;
   border-radius: 8px;
   outline: 1px solid #141d26
@@ -219,7 +208,7 @@
   border: 2px solid #141d26;
   padding: 0px 8px;
   border-radius: 5px;
-  transition: background-color 0.05s, color 0.05s, border-color 0.05s;
+  transition: background-color 0.001s, color 0.001s, border-color 0.001s;
   text-align: center;
   width: auto;
   background-color: transparent;
@@ -346,7 +335,7 @@
   border: 2px solid #141d26;
   padding: 0px 8px;
   border-radius: 5px;
-  transition: background-color 0.05s, color 0.05s, border-color 0.05s;
+  transition: background-color 0.001s, color 0.001s, border-color 0.001s;
   display: inline-block;
   text-align: center;
   width: auto;
@@ -370,16 +359,16 @@
   border: 2px solid transparent;
   padding: 0px 8px;
   transition-delay: 100ms;
-  transition: background-color 0.05s, color 0.05s, border-color 0.05s;
+  transition: background-color 0.001s, color 0.001s, border-color 0.001s;
   border-radius: 5px;
   text-align: center;
   width: auto;
-  color: #211a1a;
+  color: #222222;
 }
 
 .iconTextLight:hover {
-  background-color: #f9f9f9;
-  border-color: #f9f9f9;
+  background-color: #fbf8fd;
+  border-color: #fbf8fd;
 }
 
 .iconTextLight:focus {
@@ -393,7 +382,7 @@
   border: 2px solid transparent;
   padding: 0px 8px;
   transition-delay: 100ms;
-  transition: background-color 0.05s, color 0.05s, border-color 0.05s;
+  transition: background-color 0.001s, color 0.001s, border-color 0.001s;
   border-radius: 5px;
   text-align: center;
   width: auto;
@@ -435,7 +424,7 @@
   width: auto;
   background-color: #fbf8fd;
   text-decoration: none;
-  transition: transform 0.05s ease-in-out, box-shadow 0.05s ease-in-out;
+  transition: transform 0.001s ease-in-out, box-shadow 0.001s ease-in-out;
 }
 
 .SoftBorderAroundLatestPost:hover {
@@ -447,7 +436,7 @@
   flex-grow: 1;
   justify-content: center;
   text-decoration: none;
-  margin: 0px 3px 5px 2px;
+  margin: 2px 2px;
   transition: transform 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
 }
 
@@ -457,9 +446,9 @@
 }
 
 .SoftBorderAroundAllPost {
-  margin-bottom: 10px;
-  border: 2px solid #ccc;
+  border: 1px solid #141d26;
   padding: 0px 8px;
+  margin: 10px 10px;
   border-radius: 5px;
   width: auto;
   background-color: #FBF8FD;
@@ -468,7 +457,7 @@
 }
 
 .SoftBorderAroundAllPost:hover {
-  transform: scale(1.02);
+  transform: scale(1.01);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
@@ -581,13 +570,9 @@
   .headingPostTitle {
     color: #222222;
     font-size: 2.5rem;
-    line-height: 1;
-    font-weight: 800;
+    line-height: 1.5;
+    font-weight: normal;
     letter-spacing: -0.05rem;
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
-    padding-right: 0rem;
-    padding-left: 0rem;
   }
 
   .headingPostTitleId {
@@ -644,5 +629,21 @@
     padding-top: 6px;
     margin-bottom: -6px;
     text-align: center;
+  }
+
+  .SoftBorderAroundAllPost {
+    border: 2px solid #141d26;
+    padding: 10px 8px;
+    margin: 10px 10px;
+    border-radius: 5px;
+    width: auto;
+    background-color: #FBF8FD;
+    text-decoration: none;
+    transition: transform 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
+  }
+  
+  .SoftBorderAroundAllPost:hover {
+    transform: scale(1.01);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
 }
